# AssetOpsBench

./: .all-contributorsrc  .env.public  .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
aobench/scenario-client/: pyproject.toml
aobench/scenario-client/src/scenario_client/: client.py
aobench/scenario-server/src/scenario_server/: endpoints.py
aobench/scenario-server/src/scenario_server/grading/: grading.py
mcp/plan_execute/: cli.py  executor.py  runner.py
mcp/plan_execute/tests/: test_runner.py
mcp/servers/fmsr/: __init__.py  main.py
mcp/servers/fmsr/tests/: conftest.py  test_tools.py
mcp/servers/tsfm/: io.py  main.py
mcp/servers/tsfm/tests/: conftest.py  test_tools.py
scripts/: start_servers.sh
src/IoTAgent/: __init__.py
src/agent/: __init__.py  models.py  planner.py  runner.py
src/agent/claude_agent/: cli.py  models.py  runner.py
src/agent/claude_agent/tests/: test_runner.py
src/agent/openai_agent/: cli.py  runner.py
src/agent/openai_agent/tests/: test_runner.py
src/agent/plan_execute/: models.py  planner.py  runner.py
src/agent/tests/: test_planner.py
src/couchdb/: couchdb_setup.sh  docker-compose.yaml  init_asset_data.py  init_wo.py
src/plan_execute/: cli.py
src/plan_execute/tests/: test_models.py  test_planner.py  test_runner.py
src/servers/fmsr/: main.py
src/servers/iot/: main.py
src/servers/iot/tests/: test_couchdb.py
src/servers/tsfm/: main.py
src/servers/utilities/: main.py
src/servers/vibration/: couchdb_client.py  data_store.py  main.py
src/servers/vibration/sample_data/: bulk_docs_vibration.json  generate_synthetic_vibration.py
src/servers/vibration/tests/: conftest.py  test_tools.py
src/servers/wo/: data.py  main.py  tools.py
src/servers/wo/tests/: conftest.py  test_tools.py
src/tmp/assetopsbench/scenarios/single_agent/: vibration_utterance.json
src/workflow/: executor.py  planner.py  runner.py
src/workflow/tests/: test_models.py  test_planner.py  test_runner.py
