[build-system]
requires = ["hatchling>=1.10", "wheel"]
build-backend = "hatchling.build"

[project]
name = "assetopsbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
# Tell hatchling: all packages live under "src"
sources = ["src"]

# include everything (repo root + nested files)
include = ["**"]

exclude = [
  "benchmark/**",
  "metadata/**",
  "scenarios/**",

  ".git/**",
  ".venv/**",
  "venv/**",
  "dist/**",
  "build/**",
  "__pycache__/**",
  ".pytest_cache/**"
]
